--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <script src="js/script.js"></script>
 </head>
 <body>
+    <header>Cabecera</header>
     <main>
         <h1>This is a new Project!</h1>
         <div>
